@@ -1,3 +1,9 @@
+2010-09-08  Don Porter  <dgp@users.sourceforge.net>
+
+	* win/tclWin32Dll.c:	#ifdef protections to permit builds with
+	* win/tclWinChan.c:	mingw on amd64 systems.  Thanks to "mescalinum"
+	* win/tclWinFCmd.c:	for reporting and testing.
+
 2010-09-06  Stuart Cassoff  <stwo@users.sourceforge.net>
 
 	* unix/configure.in, generic/tclIOUtil.c (Tcl_Stat): Updated so that
